--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.55MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.65MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.79MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-304.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.17MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-506.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇳🇱 荷兰-1.23MB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇳🇱 荷兰-997.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-531.4KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.65MB/s(Youtube:不良林), server: tor.alinkrelay.com, port: 12001, type: trojan, password: 5d32a739-7796-445e-83ac-e1fb2fcdb044, sni: tor.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.87MB/s(Youtube:不良林), server: x.uhwh.ga, port: 443, type: trojan, password: xianba2, sni: x.uhwh.ga, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.40MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林), server: 213.183.53.208, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇩🇪 德国-304.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-506.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-539.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
