--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-5.90MB/s(Youtube:不良林), server: x.uhwh.ga, port: 443, type: trojan, password: xianba2, sni: x.uhwh.ga, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇬🇧 英国-1.40MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-745.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-339.5KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇭🇰 香港-461.1KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-5.23MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇳🇱 荷兰-2.04MB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-471.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-964.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
