--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-461.1KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-5.23MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.14MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: gnailiad.gq, port: 11823, type: trojan, password: eVH5bAf8mx, sni: gnailiad.gq, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇳🇱 荷兰-2.04MB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-389.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-351.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇳🇱 荷兰-1.16MB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇳🇱 荷兰-1.47MB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-989.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇳🇱 荷兰-666.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-461.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-807.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-625.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.16MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-989.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-666.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
